--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -37,7 +37,7 @@
             <h1>Президент Российской Федерации</h1>
             <hr>
             <div class="photol"><img
-                    src="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"
+                    src="Путин_23.12.20.jpg"
                     alt="" width="250px">
                 <figcaption>Владимир Владимирович Путин - президент Российской Федерации</figcaption>
             </div>
@@ -219,6 +219,10 @@
                     осуществляет общее руководство Правительством Российской Федерации, имеет право председательствовать
                     на его заседаниях;
                 </li>
+                <div class="photo">
+                    <img src="Senate_Palace_-_Desk_of_the_President.jpg" alt="">
+                    <figcaption>Рабочий кабинет президента в Сенатском дворце (фото 2003 года)</figcaption>
+                </div>
                 <li>
                     утверждает по предложению председателя Правительства Российской Федерации структуру федеральных
                     органов исполнительной власти, вносит в нее изменения; в структуре федеральных органов
@@ -247,6 +251,10 @@
                     ситуаций и ликвидации последствий стихийных бедствий, общественной безопасности), и освобождает их
                     от должности;
                 </li>
+                <div class="photo">
+                    <img src="Senate_Palace_-_President_work_area.jpg" alt="">
+                    <figcaption>Рабочий стол президента в рабочем кабинете</figcaption>
+                </div>
                 <li>
                     назначает на должность после консультаций с Советом Федерации и освобождает от должности
                     руководителей федеральных органов исполнительной власти (включая федеральных министров), ведающих
@@ -300,6 +308,10 @@
                     формирует администрацию президента Российской Федерации в целях обеспечения реализации своих
                     полномочий;
                 </li>
+                <div class="photo">
+                    <img src="Russian_president_telephones.jpg" alt="">
+                    <figcaption>Рабочие телефоны в кабинете президента</figcaption>
+                </div>
                 <li>
                     назначает и освобождает полномочных представителей президента Российской Федерации;
                 </li>
