--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -164,12 +164,7 @@
             <br>
 
             <h3>Текст гимна Российской Федерации</h3>
-            <div class="photo"><img src="gerb-of-RSFSR.png" width="250px">
-                <figcaption>Герб РСФСР 1972-1992</figcaption>
-            </div>
-            <div class="photol"><img src="flag-of-RSFSR.png" width="250px">
-                <figcaption>Флаг РСФСР 1954-1991</figcaption>
-            </div>
+
             <div class="gimn">
 
 
@@ -225,18 +220,20 @@
             </div>
 
             <hr>
-            <!-- Put this script tag to the <head> of your page -->
-            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+            <div class="preside">
+                <!-- Put this script tag to the <head> of your page -->
+                <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
-            <script type="text/javascript">
-                VK.init({ apiId: 7752244, onlyWidgets: true });
-            </script>
+                <script type="text/javascript">
+                    VK.init({ apiId: 7752244, onlyWidgets: true });
+                </script>
 
-            <!-- Put this div tag to the place, where the Comments block will be -->
-            <div id="vk_comments"></div>
-            <script type="text/javascript">
-                VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
-            </script>
+                <!-- Put this div tag to the place, where the Comments block will be -->
+                <div id="vk_comments"></div>
+                <script type="text/javascript">
+                    VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
+                </script>
+            </div>
             <br>
         </div>
     </main>
