--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -220,7 +220,7 @@
             </div>
 
             <hr>
-            <div class="preside">
+            <div class="VK">
                 <!-- Put this script tag to the <head> of your page -->
                 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
@@ -290,7 +290,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федерации</a>
                     </p>
-                    <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><a target="_blank"  href="http://kremlin.ru">Сайт президента РФ</a></p>
 
                 </div>
 
