--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -230,7 +230,7 @@
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
+                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файлы</a></p>
                 </div>
                 <div class="col-sm">
                     <img src="Lukashenko.jpg" alt="">
