--- a/contacts/index.html
+++ b/contacts/index.html
@@ -24,7 +24,7 @@
             <br>
             <br>
             <br>
-            <div id="social">
+            <div class="center">
                 <h1>Обратная связь</h1>
                 <hr>
                 <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script><iframe
@@ -41,7 +41,7 @@
             <br>
             <br>
 
-            <div id="social">
+            <div class="center">
                 <h2>Мы в соц сетях</h2>
                 <hr>
                 <a target="_blank" href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
@@ -73,7 +73,7 @@
                     <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
                     <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файл</a></p>
+                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
@@ -85,7 +85,8 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
             </div>
-        </div></footer>
+        </div>
+    </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
