--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -297,7 +297,7 @@
             <p>Если что-то случается в США сразу обвиняют Россию. Но зачем нам США? У нас есть свои проблемы. Наверно
                 это делается для того чтобы нас выбесить, но оин не знают наш характер.</p>
             <h3>Санкции против России</h3>
-            <p>Скажите мне на милость что-то изменилось после того, как на нас обсерают санкциями. Ничего. Я бы на месте
+            <p>Скажите мне на милость что-то изменилось после того, как на нас обложат санкциями. Ничего. Я бы на месте
                 Путина уже бы давно ограничил въезд Министров и Представителей тех стран которые на нас кидают санкции.
             </p>
             <p>
@@ -380,7 +380,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федераци</a></p>
-                            <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
                 </div>
 
 
