--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -36,9 +36,7 @@
         <div class="container">
             <h1>Президент Российской Федерации</h1>
             <hr>
-            <div class="photol"><img
-                    src="Путин_23.12.20.jpg"
-                    alt="" width="250px">
+            <div class="photol"><img src="Путин_23.12.20.jpg" alt="" width="250px">
                 <figcaption>Владимир Владимирович Путин - президент Российской Федерации</figcaption>
             </div>
             <p>
