--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -426,7 +426,7 @@
             <br>
             <br>
             <br>
-            <div class="photol"><img src="Red_copy_of_the_Russian_constitution.jpg" alt="" width="250px">
+            <div onclick="this.remove()" class="photol"><img src="Red_copy_of_the_Russian_constitution.jpg" alt="" width="250px">
                 <figcaption>Специальный экземпляр Конституции Российской Федерации</figcaption>
             </div>
             <p>
@@ -454,7 +454,7 @@
                         <th scope="row" rowspan="2" style="background: red;">1</th>
                         <td>1</td>
 
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис <br>
+                        <td rowspan="2"><a target="_blank" href="https://ru.wikipedia.org/wiki/Ельцин,_Борис_Николаевич">Борис <br>
                                 Николаевич <br> Ельцин</a> <br> (1931—2007)</td>
                         <td>10 июля 1991</td>
                         <td>9 августа 1996</td>
@@ -472,7 +472,7 @@
                         <td>-</td>
 
                         <td>
-                            <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                            <a target="_blank" href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
                                 Владимирович <br> Путин</a> <br> <small>(исполняющий обязанности)</small>
                         </td>
                         <td>31 декабря 1999</td>
@@ -484,7 +484,7 @@
                     <tr>
                         <th scope="row" rowspan="2" style="background: red;">2</th>
                         <td>1</td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                        <td rowspan="2"><a target="_blank" href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
                                 <br>
                                 Владимирович <br> Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2000</td>
@@ -502,7 +502,7 @@
                         <th scope="row" style="background: blue;">3</th>
                         <td>1</td>
 
-                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br>
+                        <td><a target="_blank" href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br>
                                 Анатольевич <br>
                                 Медведев</a> <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
@@ -515,7 +515,7 @@
                         <td>3</td>
 
                         </td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                        <td rowspan="2"><a target="_blank" href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
                                 <br>
                                 Владимирович <br> Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
