--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -636,7 +636,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федераци</a>
                     </p>
-                    <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                 </div>
 
             </div>
