--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -372,7 +372,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федераци</a></p>
-                    <p><a href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                 </div>
 
 
