--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -228,10 +228,10 @@
             </p>
             <table border="1" rules="all" width="100%" class="table  table-bordered">
                 <thead class="table-primary">
-                    <th>№</th>
-                    <th>Критерий для сравнения</th>
-                    <th>Россия</th>
-                    <th>США</th>
+                    <th style="width: 10px;">№</th>
+                    <th style="width: 50px;">Критерий для сравнения</th>
+                    <th style="width: 50px;">Россия</th>
+                    <th style="width: 50px;">США</th>
                 </thead>
                 <tbody class="ussr">
                     <tr>
