--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -159,145 +159,147 @@
             <p>Субъекты федерации имеют своё административно-территориальное деление. Как правило, основными
                 административно-территориальными единицами в составе субъекта федерации являются районы и города
                 областного (республиканского, краевого, окружного) значения.</p>
+            <div class="flags">
+                <h3 id="president">Президент</h3>
+                <p style="text-align: center; "><i>Основная статья</i>: <a href="president/">Президент Российской
+                        Федерации</a></p>
+                <div class="photol"><img src="800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="250px">
+                    <figcaption>Владимир Владимирович Путин - президент Российской Федерации</figcaption>
+                </div>
+                <p>
+                    Главой государства является Президент Российской Федерации, в настоящее время — Владимир
+                    Владимирович
+                    Путин. В исполнении обязанностей главы государства Президенту оказывает содействие председатель
+                    Правительства России, в настоящее время им является Михаил Владимирович Мишустин. Председатель
+                    Правительства РФ занимает пост президента в случае смерти или отставки последнего.
+                </p>
 
-            <h3 id="president">Президент</h3>
-            <p style="text-align: center; "><i>Основная статья</i>: <a href="president/">Президент Российской
-                    Федерации</a></p>
-            <div class="photol"><img src="800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="250px">
-                <figcaption>Владимир Владимирович Путин - президент Российской Федерации</figcaption>
+                <p>
+                    Президент избирается сроком на шесть лет тайным голосованием на всеобщих прямых выборах, один и тот
+                    же
+                    человек не может занимать президентский пост более двух сроков подряд. Конституционные нормы,
+                    предусматривающие шестилетний срок полномочий президента, введены в 2008 году, ранее глава
+                    государства избирался раз в четыре года.
+                </p>
+
+                <p>
+                    Президент обладает рядом важнейших полномочий: руководит внешней политикой, является Верховным
+                    главнокомандующим Вооружёнными силами, назначает с согласия Государственной думы председателя
+                    Правительства, принимает решение об отставке правительства. По предложению председателя
+                    Правительства
+                    назначает на должности заместителей председателя Правительства и федеральных министров, а также
+                    освобождает их от должности. Президент возглавляет Совет безопасности, назначает и освобождает от
+                    должности командование Вооружёнными силами. Обладает правом предлагать на рассмотрение
+                    Государственной
+                    думы кандидатуры на должность председателя Центрального банка (не входящего в состав Правительства).
+                    В
+                    случае агрессии или непосредственной угрозы агрессии Президент имеет право объявить военное
+                    положение на
+                    всей территории страны или на отдельных территориях, но при этом обязан незамедлительно известить о
+                    своём решении Федеральное собрание. Обладает правом издания указов, обязательных для исполнения на
+                    всей
+                    территории России (указы не должны противоречить федеральным законам). Обладает также целым рядом
+                    других
+                    полномочий.
+                </p>
+                <p>
+                    Президент может быть отрешён от должности Советом Федерации при условии выдвижения Государственной
+                    думой
+                    обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
+                    заключений Верховного и Конституционного судов.
+                </p>
+
+
+                <h2>Россия и США</h2>
+                <hr>
+                <h3>Американцы хотят вмешиваться в правления нашей страны</h3>
+                <p>
+                    Скажите мне на милость с какого перепугу они должны лезть в нашу политику? Им что своей политики не
+                    хватает? Или они вообразили себе, что они Серхдержава?
+                </p>
+                <p>
+                    Скажу очень просто. Россия никому не должна отчитываться о своих действиях. Мы не зависим от США.
+                    Ведь у
+                    нас есть много
+                    своего добра: технологии, ресурсы, свой газ и своя нефть.
+
+                </p>
+                <p>
+                    Приведу в виде таблице, чем мы Россияне лучше Пиндосов:
+                </p>
+                <table border="1" rules="all" width="100%" class="table  table-bordered">
+                    <thead class="table-primary">
+                        <th style="width: 10px;">№</th>
+                        <th style="width: 50px;">Критерий для сравнения</th>
+                        <th style="width: 50px;">Россия</th>
+                        <th style="width: 50px;">США</th>
+                    </thead>
+                    <tbody class="ussr">
+                        <tr>
+                            <td>1</td>
+                            <td>Вакцина от Короновируса</td>
+                            <td>Мы произвели первую вакцину в мире "Спутник V" и с серидины декабря 2020 года начали
+                                вакцинирование населения.</td>
+                            <td>Вакцина от компании Pfizer сначала была очень недоработанной.</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Налогооблажение на товары</td>
+                            <td>У нас стоимость продукта которая написана на ценнике будет такая как и на кассе, т.к.
+                                НДС
+                                хоть и 20%, но он входит в стоимость товара.</td>
+                            <td>Налогооблажение в США чуть по-другому, например 1 кг яблок стоит 25$, но на кассе цена
+                                будет
+                                другая это зависит от налога в каждом штате.</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Преступность</td>
+                            <td>Да в Росси тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция может
+                                появиться везде, даже в самом опасном районе.</td>
+                            <td>В США преступность выше и их полиция не отличается храбростью, как наша. Из-за этого по
+                                моему мнению в США преступность выше.</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Отношение к другим нациям, рассам и т.д.</td>
+                            <td>
+                                Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. Согласно
+                                статье
+                                19 пункт 2 Конституции Российской Федерации говориться:
+                                <i>
+                                    "Государство гарантирует равенство прав и свобод человека
+                                    и гражданина независимо от пола, расы, национальности, языка,
+                                    происхождения, имущественного и должностного положения, места
+                                    жительства, отношения к религии, убеждений, принадлежности
+                                    к общественным объединениям, а также других обстоятельств.
+                                    Запрещаются любые формы ограничения прав граждан по признакам
+                                    социальной, расовой, национальной, языковой или религиозной
+                                    принадлежности."
+
+                                </i>
+                            </td>
+                            <td>В США последнее время, особенно в 2020 году, белые начинают изгонять Афро-американцев. Я
+                                хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас нет
+                                законов
+                                в которых говориться что все равны и не важно какой ты рассы"</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+                <p>Это еще не все все остальное будет добавляться в таблицу.</p>
+                <h3>Нас обвиняют во вмешательство в выборы в США</h3>
+                <p>Я не понимаю почему именно мы? А может среди ваших людей есть крысы? </p>
+                <p>Если что-то случается в США сразу обвиняют Россию. Но зачем нам США? У нас есть свои проблемы.
+                    Наверно
+                    это делается для того чтобы нас выбесить, но оин не знают наш характер.</p>
+                <h3>Санкции против России</h3>
+                <p>Скажите мне на милость что-то изменилось после того, как на нас обложат санкциями. Ничего. Я бы на
+                    месте
+                    Путина уже бы давно ограничил въезд Министров и Представителей тех стран которые на нас кидают
+                    санкции.
+                </p>
             </div>
-            <p>
-                Главой государства является Президент Российской Федерации, в настоящее время — Владимир
-                Владимирович
-                Путин. В исполнении обязанностей главы государства Президенту оказывает содействие председатель
-                Правительства России, в настоящее время им является Михаил Владимирович Мишустин. Председатель
-                Правительства РФ занимает пост президента в случае смерти или отставки последнего.
-            </p>
-
-            <p>
-                Президент избирается сроком на шесть лет тайным голосованием на всеобщих прямых выборах, один и тот
-                же
-                человек не может занимать президентский пост более двух сроков подряд. Конституционные нормы,
-                предусматривающие шестилетний срок полномочий президента, введены в 2008 году, ранее глава
-                государства избирался раз в четыре года.
-            </p>
-            
-            <p>
-                Президент обладает рядом важнейших полномочий: руководит внешней политикой, является Верховным
-                главнокомандующим Вооружёнными силами, назначает с согласия Государственной думы председателя
-                Правительства, принимает решение об отставке правительства. По предложению председателя
-                Правительства
-                назначает на должности заместителей председателя Правительства и федеральных министров, а также
-                освобождает их от должности. Президент возглавляет Совет безопасности, назначает и освобождает от
-                должности командование Вооружёнными силами. Обладает правом предлагать на рассмотрение
-                Государственной
-                думы кандидатуры на должность председателя Центрального банка (не входящего в состав Правительства).
-                В
-                случае агрессии или непосредственной угрозы агрессии Президент имеет право объявить военное
-                положение на
-                всей территории страны или на отдельных территориях, но при этом обязан незамедлительно известить о
-                своём решении Федеральное собрание. Обладает правом издания указов, обязательных для исполнения на
-                всей
-                территории России (указы не должны противоречить федеральным законам). Обладает также целым рядом
-                других
-                полномочий.
-            </p>
-            <p>
-                Президент может быть отрешён от должности Советом Федерации при условии выдвижения Государственной
-                думой
-                обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
-                заключений Верховного и Конституционного судов.
-            </p>
-
-
-            <h2>Россия и США</h2>
-            <hr>
-            <h3>Американцы хотят вмешиваться в правления нашей страны</h3>
-            <p>
-                Скажите мне на милость с какого перепугу они должны лезть в нашу политику? Им что своей политики не
-                хватает? Или они вообразили себе, что они Серхдержава?
-            </p>
-            <p>
-                Скажу очень просто. Россия никому не должна отчитываться о своих действиях. Мы не зависим от США. Ведь у
-                нас есть много
-                своего добра: технологии, ресурсы, свой газ и своя нефть.
-
-            </p>
-            <p>
-                Приведу в виде таблице, чем мы Россияне лучше Пиндосов:
-            </p>
-            <table border="1" rules="all" width="100%" class="table  table-bordered">
-                <thead class="table-primary">
-                    <th style="width: 10px;">№</th>
-                    <th style="width: 50px;">Критерий для сравнения</th>
-                    <th style="width: 50px;">Россия</th>
-                    <th style="width: 50px;">США</th>
-                </thead>
-                <tbody class="ussr">
-                    <tr>
-                        <td>1</td>
-                        <td>Вакцина от Короновируса</td>
-                        <td>Мы произвели первую вакцину в мире "Спутник V" и с серидины декабря 2020 года начали
-                            вакцинирование населения.</td>
-                        <td>Вакцина от компании Pfizer сначала была очень недоработанной.</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Налогооблажение на товары</td>
-                        <td>У нас стоимость продукта которая написана на ценнике будет такая как и на кассе, т.к. НДС
-                            хоть и 20%, но он входит в стоимость товара.</td>
-                        <td>Налогооблажение в США чуть по-другому, например 1 кг яблок стоит 25$, но на кассе цена будет
-                            другая это зависит от налога в каждом штате.</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Преступность</td>
-                        <td>Да в Росси тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция может
-                            появиться везде, даже в самом опасном районе.</td>
-                        <td>В США преступность выше и их полиция не отличается храбростью, как наша. Из-за этого по
-                            моему мнению в США преступность выше.</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Отношение к другим нациям, рассам и т.д.</td>
-                        <td>
-                            Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. Согласно статье
-                            19 пункт 2 Конституции Российской Федерации говориться:
-                            <i>
-                                "Государство гарантирует равенство прав и свобод человека
-                                и гражданина независимо от пола, расы, национальности, языка,
-                                происхождения, имущественного и должностного положения, места
-                                жительства, отношения к религии, убеждений, принадлежности
-                                к общественным объединениям, а также других обстоятельств.
-                                Запрещаются любые формы ограничения прав граждан по признакам
-                                социальной, расовой, национальной, языковой или религиозной
-                                принадлежности."
-
-                            </i>
-                        </td>
-                        <td>В США последнее время, особенно в 2020 году, белые начинают изгонять Афро-американцев. Я
-                            хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас нет
-                            законов
-                            в которых говориться что все равны и не важно какой ты рассы"</td>
-                    </tr>
-
-                </tbody>
-            </table>
-            <p>Это еще не все все остальное будет добавляться в таблицу.</p>
-            <h3>Нас обвиняют во вмешательство в выборы в США</h3>
-            <p>Я не понимаю почему именно мы? А может среди ваших людей есть крысы? </p>
-            <p>Если что-то случается в США сразу обвиняют Россию. Но зачем нам США? У нас есть свои проблемы. Наверно
-                это делается для того чтобы нас выбесить, но оин не знают наш характер.</p>
-            <h3>Санкции против России</h3>
-            <p>Скажите мне на милость что-то изменилось после того, как на нас обложат санкциями. Ничего. Я бы на месте
-                Путина уже бы давно ограничил въезд Министров и Представителей тех стран которые на нас кидают санкции.
-            </p>
-            <p>
-
-            </p>
-            <p>
-
-            </p>
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
