--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -144,201 +144,210 @@
             <p>
                 <b> В свою очередь в МИД РФ </b> сочли призывы Запада "вмешательством в дела суверенного государства".
             </p>
-            <h3>Протесты в России</h3>
-            <p>
-                Под зданием Московского городского суда еще во время заседания начался митинг сторонников оппозиционера,
-                которых массово задерживали силовики.
-            </p>
-            <p>
-                В то же время штаб Навального после решения суда объявил о старте <b> акции протеста на Манежной площади
-                    в
-                    Москве</b>. Кроме того, акции прошли в других городах РФ, в частности – Санкт-Петербурге.
-            </p>
-            <p>
-                Силовики РФ в свою очередь стянули многочисленные силы, чтобы противостоять людям. <b> Задержаны более
-                    тысячи человек</b>, также некоторых из них избили. В числе задержанных и пострадавших есть
-                журналисты.
-            </p>
-            <img src="18.webp" alt="">
-            <h3>За что осудили этого Муддака</h3>
-            <p>
-                Политика обвинили в несоблюдении условий испытательного срока по приговору от 2014 года. Речь идет о
-                деле "Ив Роше".
-            </p>
-            <p>
-                Так, Следственный комитет утверждает, что братья Алексей и Олег Навальные обманом навязали российскому
-                подразделению "Ив Роше", а также фирме "Многопрофильная процессинговая компания" (МПК) посредника в
-                транспортно-логистических услугах – свою фирму "Главное подписное агентство" (Главподписка) и таким
-                образом украли у "Ив Роше Восток" 26 млн рублей, а у МПК – 3,8 млн рублей.
-            </p>
-            <p>
-                Затем большую часть этих средств они якобы легализовали, фиктивно снимая помещения под офис
-                "Главподписки" на семейной маленькой "Кобяковской фабрике лозоплетения" и оплачивая другие услуги и
-                товары фабрики.
-            </p>
-            <p>
-                После вынесения приговоров братьям Навальным, Европейский суд по правам человека пришел к выводу, что
-                они были приняты с нарушением конференции по правам человека. Однако Верховный суд РФ отказался
-                выполнять решение ЕСПЧ и отменять приговоры.
-            </p>
-            <p>
-                Многие связывают происходящее с расследованиями ФБК Навального, в том числе и о Путине, и высокой
-                поддержки россиян, которые выходили на протесты по всей стране.
-            </p>
-            <br><br>
-            <h1>Ельцину исполнилось бы 90 лет</h1>
-            <hr>
-            <img src="putin_mogila_elcina.jpg" alt="">
-            <p>
-                Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
-                деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
-                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007
-                года в Москве.
-            </p>
-            <br><br>
-            <h1>Правительство РФ</h1>
-            <hr>
-            <h2>Распоряжение Правительства РФ</h2>
-            <hr>
-            <p class="center"><b>Распоряжение Правительства РФ от 31 декабря 2020 г. N 3704-р</b></p>
-            <p>
-            <ol>
-                <li>Утвердить прилагаемый перечень российских программ для электронных вычислительных
-                    машин, которые должны быть предварительно установлены на отдельные виды технически сложных
-                    товаров.
-                </li>
-                <li>
-                    Настоящее распоряжение вступает в силу с 1 апреля 2021 г.
-                </li>
-            </ol>
-            </p>
-            <p class="center">
-                <b>Перечень
-                    российских программ для электронных вычислительных машин, которые должны быть предварительно
-                    установлены на
-                    отдельные виды технически сложных товаров
-                </b>
-            </p>
-            <table border="1" rules="all" class="table  table-bordered" style="width: 100%;">
-                <thead class="table-primary">
-                    <th>№</th>
-                    <th>Наименование программы</th>
-                    <th>Правообладатель</th>
-                    <th>Адрес сайта
-                        правообладателя в
-                        информационно-
-                        телекоммуникационной сети
-                        "Интернет"
-                    </th>
-                    <th>Операционная
-                        система
-                    </th>
+            <div class="flags">
+                <h3>Протесты в России</h3>
+                <p>
+                    Под зданием Московского городского суда еще во время заседания начался митинг сторонников
+                    оппозиционера,
+                    которых массово задерживали силовики.
+                </p>
+                <p>
+                    В то же время штаб Навального после решения суда объявил о старте <b> акции протеста на Манежной
+                        площади
+                        в
+                        Москве</b>. Кроме того, акции прошли в других городах РФ, в частности – Санкт-Петербурге.
+                </p>
+                <p>
+                    Силовики РФ в свою очередь стянули многочисленные силы, чтобы противостоять людям. <b> Задержаны
+                        более
+                        тысячи человек</b>, также некоторых из них избили. В числе задержанных и пострадавших есть
+                    журналисты.
+                </p>
+                <img src="18.webp" alt="">
+                <h3>За что осудили этого Муддака</h3>
+                <p>
+                    Политика обвинили в несоблюдении условий испытательного срока по приговору от 2014 года. Речь идет о
+                    деле "Ив Роше".
+                </p>
+                <p>
+                    Так, Следственный комитет утверждает, что братья Алексей и Олег Навальные обманом навязали
+                    российскому
+                    подразделению "Ив Роше", а также фирме "Многопрофильная процессинговая компания" (МПК) посредника в
+                    транспортно-логистических услугах – свою фирму "Главное подписное агентство" (Главподписка) и таким
+                    образом украли у "Ив Роше Восток" 26 млн рублей, а у МПК – 3,8 млн рублей.
+                </p>
+                <p>
+                    Затем большую часть этих средств они якобы легализовали, фиктивно снимая помещения под офис
+                    "Главподписки" на семейной маленькой "Кобяковской фабрике лозоплетения" и оплачивая другие услуги и
+                    товары фабрики.
+                </p>
+                <p>
+                    После вынесения приговоров братьям Навальным, Европейский суд по правам человека пришел к выводу,
+                    что
+                    они были приняты с нарушением конференции по правам человека. Однако Верховный суд РФ отказался
+                    выполнять решение ЕСПЧ и отменять приговоры.
+                </p>
+                <p>
+                    Многие связывают происходящее с расследованиями ФБК Навального, в том числе и о Путине, и высокой
+                    поддержки россиян, которые выходили на протесты по всей стране.
+                </p>
+                <br><br>
+                <h1>Ельцину исполнилось бы 90 лет</h1>
+                <hr>
+                <img src="putin_mogila_elcina.jpg" alt="">
+                <p>
+                    Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
+                    деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
+                    Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля
+                    2007
+                    года в Москве.
+                </p>
+                <br><br>
+                <h1>Правительство РФ</h1>
+                <hr>
+                <h2>Распоряжение Правительства РФ</h2>
+                <hr>
+                <p class="center"><b>Распоряжение Правительства РФ от 31 декабря 2020 г. N 3704-р</b></p>
+                <p>
+                <ol>
+                    <li>Утвердить прилагаемый перечень российских программ для электронных вычислительных
+                        машин, которые должны быть предварительно установлены на отдельные виды технически сложных
+                        товаров.
+                    </li>
+                    <li>
+                        Настоящее распоряжение вступает в силу с 1 апреля 2021 г.
+                    </li>
+                </ol>
+                </p>
+                <p class="center">
+                    <b>Перечень
+                        российских программ для электронных вычислительных машин, которые должны быть предварительно
+                        установлены на
+                        отдельные виды технически сложных товаров
+                    </b>
+                </p>
+                <table border="1" rules="all" class="table  table-bordered" style="width: 100%;">
+                    <thead class="table-primary">
+                        <th>№</th>
+                        <th>Наименование программы</th>
+                        <th>Правообладатель</th>
+                        <th>Адрес сайта
+                            правообладателя в
+                            информационно-
+                            телекоммуникационной сети
+                            "Интернет"
+                        </th>
+                        <th>Операционная
+                            система
+                        </th>
 
 
-                </thead>
-                <tbody class="ussr">
-                    <tr>
-                        <td colspan="5">Оборудование беспроводной связи для бытового использования, персональные
-                            электронные вычислительные машины, имеющие сенсорный экран,
-                            обладающие двумя и более функциями, с предварительно установленными на них программами для
-                            электронных вычислительных машин, имеющие
-                            возможность установки таких программ из магазинов приложений для операционных систем, на
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Яндекс.Браузер</td>
-                        <td rowspan="4">общество с
-                            ограниченной
-                            ответственностью
-                            "ЯНДЕКС"
-                        </td>
-                        <td><a href="https://browser.yandex.ru">https://browser.yandex.ru</a></td>
-                        <td rowspan="11">Android, IOS</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Яндекс</td>
-                        <td rowspan="3"><a href="https://mobile.yandex.ru">https://mobile.yandex.ru</a></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Яндекс.Карты</td>
+                    </thead>
+                    <tbody class="ussr">
+                        <tr>
+                            <td colspan="5">Оборудование беспроводной связи для бытового использования, персональные
+                                электронные вычислительные машины, имеющие сенсорный экран,
+                                обладающие двумя и более функциями, с предварительно установленными на них программами
+                                для
+                                электронных вычислительных машин, имеющие
+                                возможность установки таких программ из магазинов приложений для операционных систем, на
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Яндекс.Браузер</td>
+                            <td rowspan="4">общество с
+                                ограниченной
+                                ответственностью
+                                "ЯНДЕКС"
+                            </td>
+                            <td><a href="https://browser.yandex.ru">https://browser.yandex.ru</a></td>
+                            <td rowspan="11">Android, IOS</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Яндекс</td>
+                            <td rowspan="3"><a href="https://mobile.yandex.ru">https://mobile.yandex.ru</a></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Яндекс.Карты</td>
 
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Яндекс.Диск</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Яндекс.Диск</td>
 
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Почта Mail.ru</td>
-                        <td rowspan="6">
-                            общество с
-                            ограниченной
-                            ответственностью
-                            "Мэйл.Ру"
-                        </td>
-                        <td><a href="https://mail.ru">https://mail.ru</a></td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Почта Mail.ru</td>
+                            <td rowspan="6">
+                                общество с
+                                ограниченной
+                                ответственностью
+                                "Мэйл.Ру"
+                            </td>
+                            <td><a href="https://mail.ru">https://mail.ru</a></td>
 
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>ICQ</td>
-                        <td><a href="https://icq.com"></a></td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td>Голосовой
-                            ассистент
-                            "Маруся"
-                        </td>
-                        <td><a href="https://marusia.mail.ru">https://marusia.mail.ru</a></td>
-                    </tr>
-                    <tr>
-                        <td>8</td>
-                        <td>Новости Mail.ru</td>
-                        <td><a href="https://news.mail.ru">https://news.mail.ru</a></td>
-                    </tr>
-                    <tr>
-                        <td>9</td>
-                        <td>OK Live</td>
-                        <td><a href="https://ok.ru/live">https://ok.ru/live</a></td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td>Одноклассники</td>
-                        <td><a href="https://ok.ru">https://ok.ru</a></td>
-                    </tr>
-                    <tr>
-                        <td>11</td>
-                        <td>ВКонтакте</td>
-                        <td>общество с ограниченной ответственность "ВКонтакте</td>
-                        <td><a href="https://vk.com">htpps://vk.com</a></td>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td>MirPay</td>
-                        <td>акционерное
-                            общество
-                            "Национальная
-                            система платежных
-                            карт"
-                        </td>
-                        <td><a href="https://mironline.ru/mirpay">https://mironline.ru/mirpay</a></td>
-                        <td>Android</td>
-                    </tr>
-                    <tr>
-                        <td>13</td>
-                        <td>Госуслуги</td>
-                        <td>Российская Федерация</td>
-                        <td><a href="https://www.digital.gov.ru">https://www.digital.gov.ru</a></td>
-                        <td>Android, IOS</td>
-                    </tr>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>ICQ</td>
+                            <td><a href="https://icq.com"></a></td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Голосовой
+                                ассистент
+                                "Маруся"
+                            </td>
+                            <td><a href="https://marusia.mail.ru">https://marusia.mail.ru</a></td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>Новости Mail.ru</td>
+                            <td><a href="https://news.mail.ru">https://news.mail.ru</a></td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>OK Live</td>
+                            <td><a href="https://ok.ru/live">https://ok.ru/live</a></td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>Одноклассники</td>
+                            <td><a href="https://ok.ru">https://ok.ru</a></td>
+                        </tr>
+                        <tr>
+                            <td>11</td>
+                            <td>ВКонтакте</td>
+                            <td>общество с ограниченной ответственность "ВКонтакте</td>
+                            <td><a href="https://vk.com">htpps://vk.com</a></td>
+                        </tr>
+                        <tr>
+                            <td>12</td>
+                            <td>MirPay</td>
+                            <td>акционерное
+                                общество
+                                "Национальная
+                                система платежных
+                                карт"
+                            </td>
+                            <td><a href="https://mironline.ru/mirpay">https://mironline.ru/mirpay</a></td>
+                            <td>Android</td>
+                        </tr>
+                        <tr>
+                            <td>13</td>
+                            <td>Госуслуги</td>
+                            <td>Российская Федерация</td>
+                            <td><a href="https://www.digital.gov.ru">https://www.digital.gov.ru</a></td>
+                            <td>Android, IOS</td>
+                        </tr>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
